# AI-agents-basic

./: LICENSE  ReadMe.md  pyproject.toml
src/: 4_streamlit_basic_demo.py  smol_agent1.py  smol_agent2_equation.py  smol_agent_2_localLLM.py
