[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["amit-pande-2018 <itissimple@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
smolagents = {extras = ["litellm", "toolkit"], version = "^1.20.0"}
ollama = "^0.5.1"
numpy = "^2.3.2"
wikipedia = "^1.4.0"
requests = "^2.32.4"
bs4 = "^0.0.2"
scipy = "^1.16.1"
sympy = "^1.14.0"
openai = "1.68.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
